--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "js-yaml": "^4.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10"
