--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jest": "^30.0.5",
     "js-yaml": "^4.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "tail-stream": "^0.3.4"
   }
 }
