--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon bin/www"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "module-alias": "^2.2.3",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
     "tail-stream": "^0.3.4"
   }
 }
