--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon bin/www"
+    "dev": "nodemon bin/www",
+    "start": "node bin/www"
   },
   "keywords": [],
   "author": "",
